Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam impedit quo quae exercitationem blanditiis inventore ipsum officia assumenda voluptatem qui laboriosam molestiae ratione magnam commodi, vitae dolorem asperiores nihil illo.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fugiat, deleniti minima odio veritatis atque eveniet aliquam vero optio voluptatum ducimus corporis dolores illum, accusantium rerum maiores, reiciendis nobis omnis.</p>
 </body>
 </html>
 
